fixed z-index of footer

--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@ footer {
 	margin: 40px 0 0;
 	text-align: center;
 	width: 100%;
+	z-index: 9999;
 }
 
 footer nav {
@@ -303,7 +304,7 @@ ul img {
   padding: 24px;
   position: absolute;
   width: 100%;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 /******************************************
